--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </section>
     <!--Gameboard with cards-->
     <section id="gameboard" class="container-fluid">
-      <div class="container game-section-container">
+      <div class="container game-section-container" id="game-section-container">
         <div class="cards" id="cards">
           <div class="row">
             <div class="game-card" data-card="glyptodon">
