Adjust smaller phone screen sizing for cards

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h2> Test your memory and learn about Earth's extinct monster megafauna!</h2>
       <h3> Instructions </h3>
       <p class="container-fluid">
-        Test your memory skills by flipping the cards to reveal and match the pairs of prehstoric beasts!
+        Test your memory skills by flipping the cards to reveal and match the pairs of prehistoric beasts!
       </p>
     </div>
     <!--Pre-game confirmation screen-->
