--- a/index.html
+++ b/index.html
@@ -224,10 +224,13 @@
       </div>
     </section>
   </main>
-  <div>
-    <br>
-    <p class="source-link"><a href="https://www.textstudio.com/">Font generator</a></p>
-  </div>
+  <!--footer for font source link-->
+  <footer class="mt-auto">
+    <div>
+      <br>
+      <p class="source-link"><a href="https://www.textstudio.com/">Font generator</a></p>
+    </div>
+  </footer>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
