Update README.md file with testing documentation

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!--Pre-game confirmation screen-->
     <section id="start-screen-container">
       <div>
-        <h1 id="start-screen-title">Prehistoric Puzzler</h1>
+        <h2 id="start-screen-title">Prehistoric Puzzler</h2>
       </div>
       <div>
         <button id="start-game-button" class="btn btn-success">
@@ -65,6 +65,7 @@
     </section>
     <!--Gameboard with cards-->
     <section id="gameboard" class="container-fluid hidden">
+      <h3 class="hidden">Memory Card Gameboard</h3>
       <div class="container game-section-container" id="game-section-container">
         <div class="cards" id="cards">
           <div class="row">
